<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2serial</name>
  <version>0.0.1</version>
  <description>this is a package for serial communication SBC(e.g Jetson) to micro-controller(e.g Arduino).</description>
  <maintainer email="whowillcatchatastraw@gmail.com">mrrobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_cmake_auto</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>teleop_twist_joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
